# pico-vm

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.cicd/: pipeline.yml
.cicd/helpers/: docker-hash.sh
.cicd/metrics/: test-metrics.js
docs/: OVERVIEW.md
modules/: PicoVMBuildUtils.cmake
tests/: CMakeLists.txt  allocator_tests.cpp  execution_tests.cpp.bk  guarded_ptr_tests.cpp  host_functions_tests.cpp  implementation_limits_tests.cpp  instantiation_tests.cpp  main.cpp  outcome_tests.cpp  parse_tests.cpp  reentry_tests.cpp  signals_tests.cpp  stack_restriction_tests.cpp  utils.hpp  variant_tests.cpp  varint_tests.cpp  vector_tests.cpp  wasm_config.hpp.in  wasm_stack_tests.cpp  watchdog_tests.cpp
tests/fuzz/: CMakeLists.txt  fuzz_driver.cpp  fuzz_parser.cpp  test
tests/memory_tests/: CMakeLists.txt  growable_allocator_test.cpp
tests/spec/: address_tests.cpp  align_tests.cpp  binary-leb128_tests.cpp  binary_tests.cpp  block_tests.cpp  br_if_tests.cpp  br_table_tests.cpp  br_tests.cpp  break-drop_tests.cpp  call_indirect_tests.cpp  call_tests.cpp  const_tests.cpp  conversions_tests.cpp  custom_tests.cpp  data_tests.cpp  e_block_tests.cpp  e_function_tests.cpp  e_globals_tests.cpp  e_locals_tests.cpp  e_memory_tests.cpp  e_module_tests.cpp  e_table_tests.cpp  elem_tests.cpp  elem_tests.cpp.bak  endianness_tests.cpp  f32_bitwise_tests.cpp  f32_cmp_tests.cpp  f32_tests.cpp  f64_bitwise_tests.cpp  f64_cmp_tests.cpp  f64_tests.cpp  fac_tests.cpp  (+42 more)
tools/: CMakeLists.txt  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
(+62 files in other folders)
